@@ -1,4 +1,10 @@
+2014-12-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/pmurhash.h: Consistent four space indentation
+
 2014-12-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Bump Date: and Version: 
 
 	* src/init.c: Minor edit and removal of unused headers
 
